[package]
name = "live-script-broadcaster"
version = "0.1.0"
edition = "2021"
description = "Rust + Axum 直播台词分段定时推送服务"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["time"] }
